# alpaca-gcp-proxy

./: .gcloudignore  .gitignore  .therapist.yml  LICENSE  README.md  alpaca.py  apigateway.tf  auth.py  cloudbuild.yaml  config.py  frontend.tf  link.py  logger.py  main.py  main.tf  plaid.py  proxies.tf  proxy_base.py  pyproject.toml  pytest.ini  requirements.txt  schedular.tf  serverless-functions.tf  slackbot.tf  stytch.py  telemetry.py  tf-fe.tf
.github/workflows/: clean.yml  infra.yml  replace.yml  rules.yml  slackbot-docker-build-and-public.yml  terraform.yml  tf-fe-destory.yml
apigateway/: apidoc.bash  openapi.yaml
apigateway/chatbot/: main.py  pyproject.toml  requirements.txt
apigateway/get_missions/: main.py  requirements.txt
apigateway/get_user_details/: main.py  pyproject.toml  requirements.txt
apigateway/missions/: alpaca.py  main.py  pyproject.toml  requirements.txt  telemetrics.py
apigateway/new_user/: main.py  new_user.py  pip.conf  pyproject.toml  requirements.txt  telemetrics.py
apigateway/plaid/: main.py  pyproject.toml  requirements.txt
apigateway/plaid_accounts/: main.py  pyproject.toml  requirements.txt
apigateway/plaid_callback/: main.py  requirements.txt
apigateway/preferences/: main.py  pyproject.toml  requirements.txt
apigateway/rebalance/: main.py  requirements.txt
apigateway/select_bankaccount/: main.py  requirements.txt
apigateway/slackbot/: main.py  pyproject.toml  requirements.txt
apigateway/topup/: main.py  pyproject.toml  requirements.txt
apigateway/validate_run/: main.py  requirements.txt
design/newsfeed/: add_item.py  fetch.py  firestore.txt  like.py
events/: alpaca.py  new_user.py
functions/alpaca_account_events_collector/: main.py  requirements.txt
functions/alpaca_state/: alpaca.py  main.py  requirements.txt
functions/notifier/: main.py
functions/plaid_state/: main.py  plaid.py
functions/post_ach_link/: main.py  requirements.txt
infra/: .pypirc  README.md  __init__.py  auth.py  config.py  logger.py  pyproject.toml  requirements.txt
infra/infra/: __init__.py  alpaca_action.py  auth.py  config.py  logger.py  plaid_actions.py  stytch_actions.py
infra/infra/data/: alpaca_account.py  alpaca_events.py  bank_account.py  chats.py  missions.py  past_transactions.py  plaid_item.py  preferences.py  transfers.py  users.py
infra/infra/proxies/: alpaca.py  plaid.py  proxy_base.py  stytch.py
notebooks/: alpaca-assets.ipynb  compounding.ipynb  openai-lab.ipynb  pyproject.toml  requirements.txt
proxies/: alpaca.py  plaid.py  stytch.py
proxy/: link.py  main.py  requirements.txt
slackbot/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/: test_alpaca_get_accounts.py  test_alpaca_proxy.py  test_auth.py  test_link.py  test_plaid_link.py  test_proxy_basics.py  test_secrets_access.py  test_stytch_proxy.py
