[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "pytest>=7.2.1",
    "therapist>=2.2.0",
    "bandit>=1.7.4",
    "mypy>=1.0.1",
    "isort>=5.12.0",
    "autoflake>=2.0.1",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amichay Oren", email = "amor71@sgeltd.com"},
]
dependencies = [
    "functions-framework>=3.3.0",
    "requests>=2.28.2",
    "google-cloud-secret-manager>=2.15.1",
    "google-crc32c>=1.5.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
