[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "pytest>=7.2.1",
    "therapist>=2.2.0",
    "bandit>=1.7.4",
    "mypy>=1.0.1",
    "isort>=5.12.0",
    "autoflake>=2.0.1",
    "types-requests>=2.28.11.15",
    "pytest-asyncio>=0.21.0",
    "nb-clean>=2.4.0",
    "jupyter>=1.0.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amichay Oren", email = "amor71@sgeltd.com"},
]
dependencies = [
    "functions-framework>=3.3.0",
    "requests>=2.31.0",
    "google-cloud-secret-manager>=2.15.1",
    "google-crc32c>=1.5.0",
    "google-cloud-pubsub>=2.15.2",
    "google-api-python-client>=2.83.0",
    "pip>=23.0.1",
    "install>=1.3.5",
    "google-cloud-firestore>=2.10.1",
    "opentelemetry-exporter-gcp-monitoring>=1.4.0a0",
    "opentelemetry-api>=1.17.0",
    "opentelemetry-sdk>=1.17.0",
    "urllib3>=1.26.15",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "SecretStorage>=3.3.3",
    "flask>=2.3.2",
    "google-cloud>=0.34.0",
    "aiohttp>=3.8.2",
    "alpaca-py>=0.8.2",
    "openai>=0.27.7",
    "google-api-core>=2.11.1",
    "googleapis-common-protos>=1.59.1",
    "jsonschema>=4.18.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
