
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amichay Oren", email = "amichay@nine30.com"},
]
dependencies = [
    "openapi>=1.1.0",
    "functions-framework>=3.4.0",
    "requests>=2.31.0",
    "google-cloud>=0.34.0",
    "google-crc32c>=1.5.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "SecretStorage>=3.3.3",
]
requires-python = ">=3.11"
license = {text = "MIT"}
