
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amichay Oren", email = "amichay@nine30.com"},
]
dependencies = [
    "google-cloud-firestore>=2.11.1",
    "flask>=2.3.2",
    "google-cloud>=0.34.0",
    "firestore>=0.0.8",
    "functions-framework>=3.4.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
