
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amichay Oren", email = "amichay@nine30.com"},
]
dependencies = [
    "google-cloud>=0.34.0",
    "opentelemetry-api>=1.17.0",
    "opentelemetry-exporter-gcp-monitoring>=1.4.0a0",
    "opentelemetry-sdk>=1.17.0",
    "opentelemetry-semantic-conventions>=0.38b0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
