
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amichay Oren", email = "amichay@nine30.com"},
]
dependencies = [
    "google-cloud>=0.34.0",
    "opentelemetry-api>=1.17.0",
    "opentelemetry-exporter-gcp-monitoring>=1.4.0a0",
    "opentelemetry-sdk>=1.17.0",
    "opentelemetry-semantic-conventions>=0.38b0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "cachetools==5.3.0",
    "SecretStorage>=3.3.3",
    "flask>=2.3.2",
    "google-crc32c>=1.5.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
