[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amichay Oren", email = "amichay@nine30.com"},
]
dependencies = [
    "functions-framework>=3.4.0",
    "requests>=2.31.0",
    "google-cloud>=0.34.0",
    "google-cloud-firestore>=2.11.1",
    "google-cloud-monitoring>=2.15.1",
    "google-crc32c>=1.5.0",
    "google-cloud-secret-manager>=2.16.2",
    "google-auth>=2.22.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "SecretStorage>=3.3.3",
    "google-cloud-pubsub>=2.18.1",
    "flask>=2.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "therapist>=2.2.0",
    "black>=23.7.0",
    "mypy>=1.4.1",
    "autoflake>=2.2.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "types-requests>=2.31.0.2",
]
