
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Amichay Oren", email = "amichay@nine30.com"},
]
dependencies = [
    "googleapis-common-protos>=1.60.0",
    "requests>=2.31.0",
    "flask>=2.3.2",
    "google-cloud>=0.34.0",
    "google-crc32c>=1.5.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "SecretStorage>=3.3.3",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.5.0",
    "therapist>=2.2.0",
    "isort>=5.12.0",
    "black>=23.7.0",
    "bandit>=1.7.5",
]
